# online-turing-machine

./: pyproject.toml
src/api/: main.py
src/api/controller/: api_controller.py
src/api/models/: machine_model.py
src/api/repository/: api_repository.py  rabbitmq_client.py
src/api/service/: api_service.py
